CCLE-2389 - fixing indicator add/delete problems.  fixing jira ticket format issues with html tags.  refactoring a bit in order to make code more readable.

--- a/theme/uclashared/style/general.css
+++ b/theme/uclashared/style/general.css
@@ -387,12 +387,7 @@ html, body {background-color:#FFF; height:100%;}
     margin-left: 2.0em !important;
 }
 
-/* Forces radio group options to be created on newlines */
-.fgroup span {
-    display:block;
-    clear:left;
-    line-height: 20px;
-}
+/* Adds some space after the radio item */
 .fgroup span .indicator_desc {
     margin-right: 5px;
 }
